--- a/general/Hampo/app/src/main/AndroidManifest.xml
+++ b/general/Hampo/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Hampo">
         <activity
-            android:name=".MainActivity"
+            android:name=".presentacion.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.Hampo.NoActionBar">
             <intent-filter>
